rearranging my file and my folder

--- a/templates/login.html
+++ b/templates/login.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style.css" />
-        <link rel="icon" href="./image/faveIcon.svg" type="image/svg+xml" />
+        <link rel="stylesheet" href="../styles/style.css" />
+        <link rel="icon" href="../image/faveIcon.svg" type="image/svg+xml" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
         <title>photoStock | Login</title>
     </head>
@@ -12,16 +12,16 @@
         <!-- HEADER CONTAINING THE LOGO -->
         <header>
             <div class="logo">
-                <img src="./image/logo.svg" alt="" />
+                <img src="../image/logo.svg" alt="" />
                 <h2>PictureStock</h2>
             </div>
-            <div class="close"><img src="./image/close.svg" alt="" /></div>
+            <div class="close"><img src="../image/close.svg" alt="" /></div>
         </header>
         <section class="create-account">
             <!-- FORM SECTION -->
             <form action="" method="post">
                 <h2>Login to PictureStock</h2>
-                <p class="link-to-login">Don't have an account? <a href="./index.html">signup</a></p>
+                <p class="link-to-login">Don't have an account? <a href="./createAccount.html">signup</a></p>
                 <input type="email" placeholder="Email address" required />
                 <div class="password-container">
                     <input type="password" name="password" id="password" placeholder="Password" class="password" class="password" required />
@@ -42,7 +42,7 @@
                 </div>
                 <hr />
                 <button type="button" class="sign-in-with-google">
-                    <img src="./image/google_logo.svg" alt="Google Logo" />
+                    <img src="../image/google_logo.svg" alt="Google Logo" />
                     <b>Sign in with Google</b>
                 </button>
 
@@ -51,7 +51,7 @@
 
             <!-- FORM GROUP IMAGE  -->
             <div class="create-account-group-picture">
-                <img src="./image/group_photo.jpg" alt="" />
+                <img src="../image/group_photo.jpg" alt="" />
             </div>
         </section>
         <script src="formAndFormValidation.js"></script>
