navbar for the landing page

--- a/templates/login.html
+++ b/templates/login.html
@@ -15,13 +15,15 @@
                 <img src="../image/logo.svg" alt="" />
                 <h2>PictureStock</h2>
             </div>
-            <div class="close"><img src="../image/close.svg" alt="" /></div>
+            <a href="./Home.html">
+                <div class="close"><img src="../image/close.svg" alt="" /></div>
+            </a>
         </header>
         <section class="create-account">
             <!-- FORM SECTION -->
             <form action="" method="post">
                 <h2>Login to PictureStock</h2>
-                <p class="link-to-login">Don't have an account? <a href="./createAccount.html">signup</a></p>
+                <p class="link-to-login">Don't have an account? <a href="./signup.html">signup</a></p>
                 <input type="email" placeholder="Email address" required />
                 <div class="password-container">
                     <input type="password" name="password" id="password" placeholder="Password" class="password" class="password" required />
