--- a/templates/signup.html
+++ b/templates/signup.html
@@ -15,7 +15,9 @@
                 <img src="../image/logo.svg" alt="" />
                 <h2>PictureStock</h2>
             </div>
-            <div class="close"><img src="../image/close.svg" alt="" /></div>
+            <a href="./Home.html">
+                <div class="close"><img src="../image/close.svg" alt="" /></div>
+            </a>
         </header>
         <section class="create-account">
             <!-- FORM SECTION -->
@@ -34,7 +36,7 @@
                     <label for=""></label>
                     <i class="fa-solid fa-eye-slash eye-icon" id="show-password"></i>
                 </div>
-                
+
                 <button type="submit" id="signin">SIGNUP</button>
                 <hr />
                 <button type="button" class="sign-in-with-google">
