--- a/templates/Home.html
+++ b/templates/Home.html
@@ -5,12 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" href="../image/faveIcon.svg" type="image/svg+xml" />
         <link rel="stylesheet" href="../styles/global.css" />
+        <link rel="stylesheet" href="../styles/home.css" />
         <title>photoStock | Home</title>
     </head>
     <body>
         <!-- NAVIGATION SECTION -->
         <nav>
-            <div><img src="../image/logoAndtext.svg" alt="" id="logo"/></div>
+            <div><img src="../image/logoAndtext.svg" alt="" id="logo" /></div>
             <input type="checkbox" id="toggle-menu" />
             <ul>
                 <label for="toggle-menu" id="close-menu"><img src="../image/Icons/close_24dp_FILL0_wght400_GRAD0_opsz24.svg" alt="" /></label>
@@ -29,6 +30,21 @@
                 <img src="../image/Icons/menu_24dp_FILL0_wght400_GRAD0_opsz24.svg" alt="" />
             </label>
         </nav>
-        <P>lorem*200</P>
+        <div class="padding-bottom"></div>
+        <section class="hero-section hero-item-text">
+            <div class="hero-section-item">
+            <h1>Think Photos, <br />Think PictureStock.</h1>
+            <p>Your one-stop shop for everything photos in Nigeria</p>
+            <p>
+                Lorem ipsum dolor, duet solo santos diam jando Lorem ipsum dolor, duet solo santos diam jandoLorem ipsum dolor, duet solo santos diam jandoLorem ipsum dolor, duet solo santos diam
+                jandoLorem ipsum dolor, duet solo santos diam jando
+            </p>
+            <a href="./signup.html">GET STARTED</a>
+            </div>
+            <div class="hero-section-item hero-item-image">
+                <img src="../image/home_Images/hero_picture_mobile.png" alt="">
+            </div>
+            
+        </section>
     </body>
 </html>
