--- a/styles/home.css
+++ b/styles/home.css
@@ -6,6 +6,8 @@
     padding-bottom: 60px;
     border: 2px solid black;
 }
+
+/* HERO SECTION */
 .hero-section {
     height: 480px;
     background-image: url(../image/home_Images/hero_picture.png);
@@ -37,19 +39,70 @@
     font-size: 12px;
     width: 24rem;
 }
-.hero-section-item a {
+.hero-section-item a,
+.gallery a,
+.main-gallery a {
     color: var(--text-color);
     padding: 10px 80px;
     display: inline-block;
     background-color: var(--bk-color);
     border-radius: 6px;
     transition: 0.5s;
+    border: 1px solid black;
 }
-.hero-section a:hover {
+.hero-section a:hover,
+.gallery a:hover {
     background-color: white;
     color: black;
 }
 .hero-item-image {
+    display: none;
+}
+
+/* GALLERY SECTION */
+
+.gallery,
+.main-gallery {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+.gallery {
+    height: 33em;
+}
+.gallery h1 {
+    margin-top: 40px;
+    font-size: 34px;
+}
+.gallery h3 {
+    margin: 23px;
+}
+
+/* LAPTOP STYLING */
+.laptop-desktop-image {
+    width: 80%;
+}
+.laptop-desktop-image img {
+    width: 100%;
+}
+.main-gallery {
+    background-color: var(--bk-color);
+    color: white;
+    padding-top: 100px;
+
+}
+.main-gallery a {
+    color: black;
+    font-weight: bold;
+}
+.main-gallery-image {
+    width: 80%;
+}
+.main-gallery-image img {
+    width: 100%;
+}
+.dont-show-desktop{
     display: none;
 }
 @media screen and (max-width: 858px) {
@@ -66,6 +119,9 @@
     .hero-section-item p:nth-of-type(2) {
         font-size: 12px;
     }
+    .gallery {
+        height: 24em;
+    }
 }
 @media screen and (max-width: 731px) {
     .hero-section {
@@ -81,6 +137,12 @@
     .hero-section-item p:nth-of-type(2) {
         font-size: 9px;
     }
+    .show-desktop-only{
+        display: none;
+    }
+    .dont-show-desktop{
+    display: block;
+}
 }
 @media screen and (max-width: 430px) {
     .hero-section {
@@ -97,12 +159,11 @@
         overflow: hidden;
     }
 
-    .hero-item-image img{
+    .hero-item-image img {
         width: 110%;
     }
     .hero-section * {
         width: auto;
-        
     }
     .hero-section-item h1,
     .hero-section-item p:nth-of-type(2),
@@ -110,10 +171,17 @@
         width: 100%;
         padding: 0px 20px;
     }
+
+    .hero-section-item p:first-of-type {
+        font-size: 13px;
+    }
+    .hero-section-item p:nth-of-type(2) {
+        font-size: 9px;
+    }
+    .hero-section h1 {
+        font-size: ;
+    }
     .hero-section-item a {
-    padding: 10px 60px;
-    
-
-
-}
+        padding: 10px 60px;
+    }
 }
