--- a/templates/home.html
+++ b/templates/home.html
@@ -20,31 +20,51 @@
                     <li><a href="">BLOG</a></li>
                     <li><a href="">ABOUT</a></li>
                 </span>
+
                 <span class="menu-logins">
                     <li><a href="./login.html">LOGIN</a></li>
                     <li><a href="./signup.html">SIGNUP</a></li>
                 </span>
             </ul>
+
             <label for="toggle-menu" id="overlay"></label>
             <label for="toggle-menu" id="open-menu">
                 <img src="../image/Icons/menu_24dp_FILL0_wght400_GRAD0_opsz24.svg" alt="" />
             </label>
         </nav>
+
         <div class="padding-bottom"></div>
         <section class="hero-section hero-item-text">
             <div class="hero-section-item">
-            <h1>Think Photos, <br />Think PictureStock.</h1>
-            <p>Your one-stop shop for everything photos in Nigeria</p>
-            <p>
-                Lorem ipsum dolor, duet solo santos diam jando Lorem ipsum dolor, duet solo santos diam jandoLorem ipsum dolor, duet solo santos diam jandoLorem ipsum dolor, duet solo santos diam
-                jandoLorem ipsum dolor, duet solo santos diam jando
-            </p>
-            <a href="./signup.html">GET STARTED</a>
+                <h1>Think Photos, <br />Think PictureStock.</h1>
+                <p>Your one-stop shop for everything photos in Nigeria</p>
+                <p>
+                    Lorem ipsum dolor, duet solo santos diam jando Lorem ipsum dolor, duet solo santos diam jandoLorem ipsum dolor, duet solo santos diam jandoLorem ipsum dolor, duet solo santos diam jandoLorem ipsum dolor, duet solo santos diam jando
+                </p>
+                <a href="./signup.html">GET STARTED</a>
             </div>
             <div class="hero-section-item hero-item-image">
-                <img src="../image/home_Images/hero_picture_mobile.png" alt="">
+                <img src="../image/home_Images/hero_picture_mobile.png" alt="" />
             </div>
-            
+        </section>
+
+        <!-- THIS IS THE FIRST GALLERY CALLED IT GALLERY -->
+        <section class="gallery">
+            <h1>PHOTOS FOR EVERY SCENARIO</h1>
+            <h3>Lorem ipsum dolor, duet solo santos diam jando Lorem ipsum dolor, duet solo santos diam</h3>
+            <a href="">EXPLORE</a>
+            <div class="laptop-desktop-image"><img src="../image/home_Images/laptop-desktop-view.png" alt="" /></div>
+        </section>
+
+        <!-- THIS IS THE SECOND GALLERY I CALLED THE MAIN GALLERY -->
+        <section class="main-gallery">
+            <h1>IMMERSIVE GALLERY</h1>
+            <p>Lorem ipsum dolor, duet solo santos diam jando Lorem ipsum dolor, duet solo santos diam </p>
+            <a href="">SHOP</a>
+            <div class="main-gallery-image">
+                <img src="../image/home_Images/gallary_collect_with_phone.png" alt="" class="dont-show-desktop-only">
+                <img src="../image/home_Images/gallery_collecction_images.png" alt="" class="dont-show-desktop">
+            </div>
         </section>
     </body>
 </html>
