--- a/templates/login.html
+++ b/templates/login.html
@@ -11,11 +11,13 @@
     <body>
         <!-- HEADER CONTAINING THE LOGO -->
         <header>
-            <div class="logo">
-                <img src="../image/logo.svg" alt="" />
-                <h2>PictureStock</h2>
-            </div>
-            <a href="./Home.html">
+            <a href="./home.html" class="no-underline">
+                <div class="logo">
+                    <img src="../image/logo.svg" alt="" />
+                    <h2>PictureStock</h2>
+                </div>
+            </a>
+            <a href="./home.html">
                 <div class="close"><img src="../image/close.svg" alt="" /></div>
             </a>
         </header>
