--- a/templates/home.html
+++ b/templates/home.html
@@ -59,10 +59,10 @@
         <!-- THIS IS THE SECOND GALLERY I CALLED THE MAIN GALLERY -->
         <section class="main-gallery">
             <h1>IMMERSIVE GALLERY</h1>
-            <p>Lorem ipsum dolor, duet solo santos diam jando Lorem ipsum dolor, duet solo santos diam </p>
+            <h3>Lorem ipsum dolor, duet solo santos diam jando Lorem ipsum dolor, duet solo santos diam </h3>
             <a href="">SHOP</a>
             <div class="main-gallery-image">
-                <img src="../image/home_Images/gallary_collect_with_phone.png" alt="" class="dont-show-desktop-only">
+                <img src="../image/home_Images/gallary_collect_with_phone.png" alt="" class="show-desktop-only">
                 <img src="../image/home_Images/gallery_collecction_images.png" alt="" class="dont-show-desktop">
             </div>
         </section>
