--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
     <body>
         <!-- NAVIGATION SECTION -->
         <nav>
-            <div><img src="../image/logoAndtext.svg" alt="" id="logo" /></div>
+            <div><img src="../image/logoAndtext.svg" alt="" id="logo" loading="lazy"/></div>
             <input type="checkbox" id="toggle-menu" />
             <ul>
                 <label for="toggle-menu" id="close-menu"><img src="../image/Icons/close_24dp_FILL0_wght400_GRAD0_opsz24.svg" alt="" /></label>
@@ -29,7 +29,7 @@
 
             <label for="toggle-menu" id="overlay"></label>
             <label for="toggle-menu" id="open-menu">
-                <img src="../image/Icons/menu_24dp_FILL0_wght400_GRAD0_opsz24.svg" alt="" />
+                <img src="../image/Icons/menu_24dp_FILL0_wght400_GRAD0_opsz24.svg" alt="" loading="lazy"/>
             </label>
         </nav>
 
@@ -44,7 +44,7 @@
                 <a href="./signup.html">GET STARTED</a>
             </div>
             <div class="hero-section-item hero-item-image">
-                <img src="../image/home_Images/hero_picture_mobile.png" alt="" />
+                <img src="../image/home_Images/hero_picture_mobile.png" alt="" loading="lazy"/>
             </div>
         </section>
 
@@ -53,7 +53,7 @@
             <h1>PHOTOS FOR EVERY SCENARIO</h1>
             <h3>Lorem ipsum dolor, duet solo santos diam jando Lorem ipsum dolor, duet solo santos diam</h3>
             <a href="">EXPLORE</a>
-            <div class="laptop-desktop-image"><img src="../image/home_Images/laptop-desktop-view.png" alt="" /></div>
+            <div class="laptop-desktop-image"><img src="../image/home_Images/laptop-desktop-view.png" alt="" loading="lazy"/></div>
         </section>
 
         <!-- THIS IS THE SECOND GALLERY I CALLED THE MAIN GALLERY -->
@@ -62,8 +62,8 @@
             <h3>Lorem ipsum dolor, duet solo santos diam jando Lorem ipsum dolor, duet solo santos diam </h3>
             <a href="">SHOP</a>
             <div class="main-gallery-image">
-                <img src="../image/home_Images/gallary_collect_with_phone.png" alt="" class="show-desktop-only">
-                <img src="../image/home_Images/gallery_collecction_images.png" alt="" class="dont-show-desktop">
+                <img src="../image/home_Images/gallary_collect_with_phone.png" alt="" loading="lazy" class="show-desktop-only">
+                <img src="../image/home_Images/gallery_collecction_images.png" alt=""  loading="lazy" class="dont-show-desktop">
             </div>
         </section>
     </body>
