--- a/templates/home.html
+++ b/templates/home.html
@@ -53,7 +53,10 @@
             <h1>PHOTOS FOR EVERY SCENARIO</h1>
             <h3>Lorem ipsum dolor, duet solo santos diam jando Lorem ipsum dolor, duet solo santos diam</h3>
             <a href="">EXPLORE</a>
-            <div class="laptop-desktop-image"><img src="../image/home_Images/laptop-desktop-view.png" alt="" loading="lazy"/></div>
+            <div class="laptop-desktop-image">
+                <img src="../image/home_Images/laptop-desktop-view.png" alt="" loading="lazy" class="show-desktop-only"/>
+                <img src="../image/home_Images/laptop-mobile.png" alt="" loading="lazy" class="dont-show-desktop">
+            </div>
         </section>
 
         <!-- THIS IS THE SECOND GALLERY I CALLED THE MAIN GALLERY -->
