removing lorem and adding actual text

--- a/templates/home.html
+++ b/templates/home.html
@@ -39,7 +39,7 @@
                 <h1>Think Photos, <br />Think PictureStock.</h1>
                 <p>Your one-stop shop for everything photos in Nigeria</p>
                 <p>
-                    Lorem ipsum dolor, duet solo santos diam jando Lorem ipsum dolor, duet solo santos diam jandoLorem ipsum dolor, duet solo santos diam jandoLorem ipsum dolor, duet solo santos diam jandoLorem ipsum dolor, duet solo santos diam jando
+                    Discover Nigeria through captivating images. Find the perfect visuals for any occasion. Whether you are a designer, blogger or someone just looking for the perfect shot, we have an exquisite gallery of high-quality photos that will elevate your projects.
                 </p>
                 <a href="./signup.html">GET STARTED</a>
             </div>
@@ -51,7 +51,7 @@
         <!-- THIS IS THE FIRST GALLERY CALLED IT GALLERY -->
         <section class="gallery">
             <h1>PHOTOS FOR EVERY SCENARIO</h1>
-            <h3>Lorem ipsum dolor, duet solo santos diam jando Lorem ipsum dolor, duet solo santos diam</h3>
+            <h3>Explore thousands of images spanning diverse categories, themes, and concepts.</h3>
             <a href="">EXPLORE</a>
             <div class="laptop-desktop-image">
                 <img src="../image/home_Images/laptop-desktop-view.png" alt="" loading="lazy" class="show-desktop-only"/>
@@ -62,7 +62,7 @@
         <!-- THIS IS THE SECOND GALLERY I CALLED THE MAIN GALLERY -->
         <section class="main-gallery">
             <h1>IMMERSIVE GALLERY</h1>
-            <h3>Lorem ipsum dolor, duet solo santos diam jando Lorem ipsum dolor, duet solo santos diam </h3>
+            <h3>Plunge into a wide range of photos to advance your visual journey.</h3>
             <a href="">SHOP</a>
             <div class="main-gallery-image">
                 <img src="../image/home_Images/gallary_collect_with_phone.png" alt="" loading="lazy" class="show-desktop-only">
