--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
     <body>
         <!-- NAVIGATION SECTION -->
         <nav>
-            <div><img src="../image/logoAndtext.svg" alt="" id="logo" loading="lazy"/></div>
+            <div><img src="../image/logoAndtext.svg" alt="" id="logo" loading="lazy" /></div>
             <input type="checkbox" id="toggle-menu" />
             <ul>
                 <label for="toggle-menu" id="close-menu"><img src="../image/Icons/close_24dp_FILL0_wght400_GRAD0_opsz24.svg" alt="" /></label>
@@ -29,7 +29,7 @@
 
             <label for="toggle-menu" id="overlay"></label>
             <label for="toggle-menu" id="open-menu">
-                <img src="../image/Icons/menu_24dp_FILL0_wght400_GRAD0_opsz24.svg" alt="" loading="lazy"/>
+                <img src="../image/Icons/menu_24dp_FILL0_wght400_GRAD0_opsz24.svg" alt="" loading="lazy" />
             </label>
         </nav>
 
@@ -39,12 +39,13 @@
                 <h1>Think Photos, <br />Think PictureStock.</h1>
                 <p>Your one-stop shop for everything photos in Nigeria</p>
                 <p>
-                    Discover Nigeria through captivating images. Find the perfect visuals for any occasion. Whether you are a designer, blogger or someone just looking for the perfect shot, we have an exquisite gallery of high-quality photos that will elevate your projects.
+                    Discover Nigeria through captivating images. Find the perfect visuals for any occasion. Whether you are a designer, blogger or someone just looking for the perfect shot, we have an
+                    exquisite gallery of high-quality photos that will elevate your projects.
                 </p>
                 <a href="./signup.html">GET STARTED</a>
             </div>
             <div class="hero-section-item hero-item-image">
-                <img src="../image/home_Images/hero_picture_mobile.png" alt="" loading="lazy"/>
+                <img src="../image/home_Images/hero_picture_mobile.png" alt="" loading="lazy" />
             </div>
         </section>
 
@@ -54,8 +55,8 @@
             <h3>Explore thousands of images spanning diverse categories, themes, and concepts.</h3>
             <a href="">EXPLORE</a>
             <div class="laptop-desktop-image">
-                <img src="../image/home_Images/laptop-desktop-view.png" alt="" loading="lazy" class="show-desktop-only"/>
-                <img src="../image/home_Images/laptop-mobile.png" alt="" loading="lazy" class="dont-show-desktop">
+                <img src="../image/home_Images/laptop-desktop-view.png" alt="" loading="lazy" class="show-desktop-only" />
+                <img src="../image/home_Images/laptop-mobile.png" alt="" loading="lazy" class="dont-show-desktop" />
             </div>
         </section>
 
@@ -65,8 +66,42 @@
             <h3>Plunge into a wide range of photos to advance your visual journey.</h3>
             <a href="">SHOP</a>
             <div class="main-gallery-image">
-                <img src="../image/home_Images/gallary_collect_with_phone.png" alt="" loading="lazy" class="show-desktop-only">
-                <img src="../image/home_Images/gallery_collecction_images.png" alt=""  loading="lazy" class="dont-show-desktop">
+                <img src="../image/home_Images/gallary_collect_with_phone.png" alt="" loading="lazy" class="show-desktop-only" />
+                <img src="../image/home_Images/gallery_collecction_images.png" alt="" loading="lazy" class="dont-show-desktop" />
+            </div>
+        </section>
+
+        <!-- I CALLED THIS OFFER BECAUSE IT SAYS SOME UNIQUE QUALITIES ABOUT THE COMPENY -->
+        <section class="offers">
+            <!-- THE FIRST ITEM IN THE OFFER -->
+
+            <h1>WHY WE ARE THE BEST</h1>
+            <div class="offers-item-container">
+                <div class="offers-items">
+                    <div class="image"><img src="../image/Icons/low_commision.svg" alt="" /></div>
+                    <h2>Low Commission</h2>
+                    <p>Our commission percentage system is designed to be flexible, transparent, and tailored to the unique needs of every individual or business.</p>
+                </div>
+
+                <!-- THE SECOND ITEM IN THE OFFER SECTION -->
+                <div class="offers-items">
+                    <div class="image"><img src="../image/Icons/price.svg" alt="" /></div>
+                    <h2>Decide Your Price</h2>
+                    <p>
+                        We understand that traditional pricing structures may not always align with the diverse needs and preferences of our community. That's why we've introduced a dynamic pricing
+                        system that allows users to set their own prices based on what they believe is fair and reasonable.
+                    </p>
+                </div>
+
+                <!-- THE SECOND ITEM IN THE OFFER SECTION -->
+                <div class="offers-items">
+                    <div class="image"><img src="../image/Icons/ultimate_stock.svg" alt="" /></div>
+                    <h2>Decide Your Price</h2>
+                    <p>
+                        We understand that traditional pricing structures may not always align with the diverse needs and preferences of our community. That's why we've introduced a dynamic pricing
+                        system that allows users to set their own prices based on what they believe is fair and reasonable.
+                    </p>
+                </div>
             </div>
         </section>
     </body>
