setting the responsiveness for the offer section

--- a/templates/home.html
+++ b/templates/home.html
@@ -71,7 +71,7 @@
             </div>
         </section>
 
-        <!-- I CALLED THIS OFFER BECAUSE IT SAYS SOME UNIQUE QUALITIES ABOUT THE COMPENY -->
+        <!-- I CALLED THIS OFFER BECAUSE IT SAYS SOME UNIQUE QUALITIES ABOUT THE COMPANY -->
         <section class="offers">
             <!-- THE FIRST ITEM IN THE OFFER -->
 
@@ -102,7 +102,38 @@
                         system that allows users to set their own prices based on what they believe is fair and reasonable.
                     </p>
                 </div>
-                
+            </div>
+        </section>
+
+        <!-- THIS IS THE REVIEW SECTION -->
+        <section class="review">
+            <h1>WHAT OUR USERS THINK ABOUT US</h1>
+            <p>PictureStock: A Photography Game-Changer</p>
+
+            <!-- THIS IS THE FIRST REVIEWER -->
+            <div class="review-item-container">
+                <div class="review-items">
+                    <div class="image"></div>
+                    <h2>EMPRESS UNOSHA</h2>
+                    <p>"It is really easy to navigate, and more importantly, it gives me access to quality photos, for my every purpose and need."</p>
+                </div>
+
+                <!-- THIS IS THE SECOND REVIEWER -->
+                <div class="review-items">
+                    <div class="image"></div>
+                    <h2>OSITA EDAGWA</h2>
+                    <p>
+                        "As a freelance graphic designer, finding real-life high-quality images of actual real events to incorporate into my projects used to be a time-consuming and often frustrating
+                        task. However, since discovering PictureStock, my entire workflow has been transformed for the better. "
+                    </p>
+                </div>
+
+                <!-- THIS IS THE THIRD REVIEWER -->
+                <div class="review-items">
+                    <div class="image"></div>
+                    <h2>INIOLUWA C. FAGEYINBO</h2>
+                    <p>"In terms of pricing options, PictureStock offers excellent value for money."</p>
+                </div>
             </div>
         </section>
     </body>
