--- a/templates/home.html
+++ b/templates/home.html
@@ -136,5 +136,45 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <ul>
+                <h1>SHOP</h1>
+                <li><a href="">Store</a></li>
+                <li><a href="">Gallery</a></li>
+                <li><a href="">Personalized Gallery</a></li>
+                <li><a href="">Swift Order</a></li>
+                <li><a href="">Bulk Order</a></li>
+            </ul>
+            <ul>
+                <h1>RESOURCES</h1>
+                <li><a href="">Examples</a></li>
+                <li><a href="">Help & Support</a></li>
+                <li><a href="">Service Status</a></li>
+                <li><a href="">PictureStock Blog</a></li>
+                <li><a href="">Personalized Site</a></li>
+            </ul>
+            <ul>
+                <h1>COMPANY</h1>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Careers</a></li>
+                <li><a href="">Terms of Service</a></li>
+                <li><a href="">Privacy Policy</a></li>
+                <li><a href="">Licensing</a></li>
+            </ul>
+            <div>
+                <div class="footer-logo">
+                    <img src="../image/Icons/whiteLogo.svg" alt="">
+                </div>
+                <p>Your one-stop shop for everything photography. Think Photos, Think PictureStock.</p>
+                <h2>SOCIAL MEDIA</h2>
+                <div class="socials">
+                    <img src="../image/Icons/Container.svg" alt="">
+                    <img src="../image/Icons/Container-1.svg" alt="">
+                    <img src="../image/Icons/Container-2.svg" alt="">
+                    <img src="../image/Icons/Container-3.svg" alt="">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
