--- a/styles/global.css
+++ b/styles/global.css
@@ -29,6 +29,7 @@ nav li {
 }
 a {
     text-decoration: none;
+    color: black;
 }
 nav a {
     padding: 15px 30px;
@@ -63,6 +64,47 @@ a:hover {
     display: none;
 }
 
+/* FOOTER SECTION */
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--bk-color);
+    color: var(--text-color);
+    flex-wrap: wrap;
+    padding: 40px 90px;
+    gap: 30px;
+
+}
+footer ul {
+    flex-basis: 200px;
+}
+
+footer > div {
+    flex-basis: 200px;
+    flex-grow: 2;
+}
+footer>div p{
+    margin: 30px 0;
+    width: 340px;
+}
+footer>div h2{
+    margin: 10px 0;
+}
+footer > div,
+footer ul {
+    font-size: 14px;
+    padding: 10px;
+    justify-content: center;
+}
+footer a {
+    color: var(--text-color);
+    line-height: 40px;
+    font-size: 14px;
+}
+footer >div .socials *{
+    margin-right: 10px;
+}
 /* ADJUSTING THE PADDING AND MARGIN TO MAKE IT RESPONSIVE */
 @media screen and (max-width: 858px) {
     nav a {
@@ -88,6 +130,10 @@ a:hover {
     }
     #logo {
         width: 30vw;
+    }
+       footer,
+    footer li {
+        text-align: center;
     }
 }
 
@@ -158,5 +204,12 @@ a:hover {
     }
     #close-menu:hover {
         background-color: red;
+    }
+    footer,
+    footer li {
+        text-align: center;
+    }
+    footer a{
+        line-height: 5px;
     }
 }
