--- a/templates/home.html
+++ b/templates/home.html
@@ -113,14 +113,18 @@
             <!-- THIS IS THE FIRST REVIEWER -->
             <div class="review-item-container">
                 <div class="review-items">
-                    <div class="image"></div>
+                    <div class="image">
+                        <img src="../image/home_Images/reviewer.png" alt="">
+                    </div>
                     <h2>EMPRESS UNOSHA</h2>
                     <p>"It is really easy to navigate, and more importantly, it gives me access to quality photos, for my every purpose and need."</p>
                 </div>
 
                 <!-- THIS IS THE SECOND REVIEWER -->
                 <div class="review-items">
-                    <div class="image"></div>
+                    <div class="image">
+                        <img src="../image/home_Images/reviewer2.png" alt="">
+                    </div>
                     <h2>OSITA EDAGWA</h2>
                     <p>
                         "As a freelance graphic designer, finding real-life high-quality images of actual real events to incorporate into my projects used to be a time-consuming and often frustrating
@@ -130,7 +134,7 @@
 
                 <!-- THIS IS THE THIRD REVIEWER -->
                 <div class="review-items">
-                    <div class="image"></div>
+                    <div class="image"><img src="../image/home_Images/reviewer.png" alt=""></div>
                     <h2>INIOLUWA C. FAGEYINBO</h2>
                     <p>"In terms of pricing options, PictureStock offers excellent value for money."</p>
                 </div>
