--- a/styles/global.css
+++ b/styles/global.css
@@ -205,7 +205,7 @@ footer > div .socials * {
         width: 50px;
     }
     #close-menu:hover {
-        background-color: red;
+        background-color: rgb(255, 255, 255);
     }
     footer,
     footer li {
