fixing the bug found in the toggle password

--- a/styles/global.css
+++ b/styles/global.css
@@ -214,7 +214,7 @@ footer > div .socials * {
     footer a {
         line-height: 5px;
     }
-    footer > div img {
+    footer > div .socials img {
         width: 20px;
     }
     footer > div .socials * {
