--- a/templates/login.html
+++ b/templates/login.html
@@ -58,6 +58,6 @@
                 <img src="../image/group_photo.jpg" alt="" />
             </div>
         </section>
-        <script src="formAndFormValidation.js"></script>
+        <script src="../script/formAndFormValidation.js"></script>
     </body>
 </html>
