correcting decide your price

--- a/templates/home.html
+++ b/templates/home.html
@@ -96,7 +96,7 @@
                 <!-- THE SECOND ITEM IN THE OFFER SECTION -->
                 <div class="offers-items">
                     <div class="image"><img src="../image/Icons/ultimate_stock.svg" alt="" /></div>
-                    <h2>Decide Your Price</h2>
+                    <h2>Unlimited Stocks</h2>
                     <p>
                         We understand that traditional pricing structures may not always align with the diverse needs and preferences of our community. That's why we've introduced a dynamic pricing
                         system that allows users to set their own prices based on what they believe is fair and reasonable.
