renaming all home file to landing

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" href="../image/faveIcon.svg" type="image/svg+xml" />
         <link rel="stylesheet" href="../styles/global.css" />
-        <link rel="stylesheet" href="../styles/home.css" />
-        <title>photoStock | Home</title>
+        <link rel="stylesheet" href="../styles/landing.css" />
+        <title>photoStock | landing Page</title>
     </head>
     <body>
         <!-- NAVIGATION SECTION -->
@@ -34,6 +34,8 @@
         </nav>
 
         <div class="padding-bottom"></div>
+    
+        <!-- HERO SECTION -->
         <section class="hero-section hero-item-text">
             <div class="hero-section-item">
                 <h1>Think Photos, <br />Think PictureStock.</h1>
@@ -45,7 +47,7 @@
                 <a href="./signup.html">GET STARTED</a>
             </div>
             <div class="hero-section-item hero-item-image">
-                <img src="../image/home_Images/hero_picture_mobile.png" alt="" loading="lazy" />
+                <img src="../image/landing_page_images/hero_picture_mobile.png" alt="" loading="lazy" />
             </div>
         </section>
 
@@ -55,8 +57,8 @@
             <h3>Explore thousands of images spanning diverse categories, themes, and concepts.</h3>
             <a href="">EXPLORE</a>
             <div class="laptop-desktop-image">
-                <img src="../image/home_Images/laptop-desktop-view.png" alt="" loading="lazy" class="show-desktop-only" />
-                <img src="../image/home_Images/laptop-mobile.png" alt="" loading="lazy" class="dont-show-desktop" />
+                <img src="../image/landing_page_images/laptop-desktop-view.png" alt="" loading="lazy" class="show-desktop-only" />
+                <img src="../image/landing_page_images/laptop-mobile.png" alt="" loading="lazy" class="dont-show-desktop" />
             </div>
         </section>
 
@@ -66,8 +68,8 @@
             <h3>Plunge into a wide range of photos to advance your visual journey.</h3>
             <a href="">SHOP</a>
             <div class="main-gallery-image">
-                <img src="../image/home_Images/gallary_collect_with_phone.png" alt="" loading="lazy" class="show-desktop-only" />
-                <img src="../image/home_Images/gallery_collecction_images.png" alt="" loading="lazy" class="dont-show-desktop" />
+                <img src="../image/landing_page_images/gallary_collect_with_phone.png" alt="" loading="lazy" class="show-desktop-only" />
+                <img src="../image/landing_page_images/gallery_collecction_images.png" alt="" loading="lazy" class="dont-show-desktop" />
             </div>
         </section>
 
@@ -96,7 +98,7 @@
                 <!-- THE SECOND ITEM IN THE OFFER SECTION -->
                 <div class="offers-items">
                     <div class="image"><img src="../image/Icons/ultimate_stock.svg" alt="" /></div>
-                    <h2>Unlimited Stocks</h2>
+                    <h2>Unlimited Stocksc</h2>
                     <p>
                         We understand that traditional pricing structures may not always align with the diverse needs and preferences of our community. That's why we've introduced a dynamic pricing
                         system that allows users to set their own prices based on what they believe is fair and reasonable.
@@ -114,7 +116,7 @@
             <div class="review-item-container">
                 <div class="review-items">
                     <div class="image">
-                        <img src="../image/home_Images/reviewer.png" alt="">
+                        <img src="../image/landing_page_images/embress.JPG" alt="">
                     </div>
                     <h2>EMPRESS UNOSHA</h2>
                     <p>"It is really easy to navigate, and more importantly, it gives me access to quality photos, for my every purpose and need."</p>
@@ -123,7 +125,7 @@
                 <!-- THIS IS THE SECOND REVIEWER -->
                 <div class="review-items">
                     <div class="image">
-                        <img src="../image/home_Images/reviewer2.png" alt="">
+                        <img src="../image/landing_page_images/osita.jpg" alt="">
                     </div>
                     <h2>OSITA EDAGWA</h2>
                     <p>
@@ -134,7 +136,7 @@
 
                 <!-- THIS IS THE THIRD REVIEWER -->
                 <div class="review-items">
-                    <div class="image"><img src="../image/home_Images/reviewer.png" alt=""></div>
+                    <div class="image"><img src="../image/landing_page_images/ini.JPG" alt=""></div>
                     <h2>INIOLUWA C. FAGEYINBO</h2>
                     <p>"In terms of pricing options, PictureStock offers excellent value for money."</p>
                 </div>
