--- a/styles/landing.css
+++ b/styles/landing.css
@@ -1,3 +1,4 @@
+@import url('https://db.onlinewebfonts.com/c/368ffe166edce08259aef8608067057a?family=Gabriela+Stencil+W00+Bold');
 :root {
     --text-color: white;
     --bk-color: black;
@@ -10,7 +11,7 @@
 /* HERO SECTION */
 .hero-section {
     height: 480px;
-    background-image: url(../image/home_Images/hero_picture.png);
+    background-image: url(../image/landing_page_images/hero_picture.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -19,6 +20,9 @@
     align-items: center;
     padding-left: 10vw;
     transition: 0.7s;
+}
+.hero-section-item h1{
+    font-family: Gabriela Stencil W00 Bold, sans-serif;
 }
 .hero-section-item {
     width: 34rem;
@@ -144,9 +148,10 @@ li{
     padding: 20px;
     box-shadow: 0px 0px 46px -27px rgba(0,0,0,0.75);
     align-self: stretch;
-    font-size: 15px;
+    font-size: 14px;
     margin: 0 auto;
 }
+
 .offers-items h2,
 .review-items h2{
     margin: 13px 0;
@@ -157,9 +162,24 @@ li{
 .review{
     text-align: center;
 }
+.review .image{
+    width: 60px;
+    height: 60px;
+    background-color: red;
+    margin: 0 auto;
+    border-radius: 50%;
+}
+.review .image img{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+}
 
+.review p{
+    font-style: italic;
+}
 /* FOOTER SECTION */
-/* since footer design is going to be in every page i move the design to global.css file */
+/* since footer design is going to be in every page I move the design to global.css file */
 
 
 @media screen and (max-width: 1000px) {
@@ -213,6 +233,8 @@ li{
         height: 640px;
     }
 }
+
+
 @media screen and (max-width: 430px) {
     .hero-section {
         background-position-x: center;
@@ -257,4 +279,4 @@ li{
         height: 540px;
     }
 }
-}
+
