--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,13 +11,13 @@
     <body>
         <!-- HEADER CONTAINING THE LOGO -->
         <header>
-            <a href="./home.html" class="no-underline">
+            <a href="./landing.html" class="no-underline">
                 <div class="logo">
                     <img src="../image/logo.svg" alt="" />
                     <h2>PictureStock</h2>
                 </div>
             </a>
-            <a href="./home.html">
+            <a href="./landing.html">
                 <div class="close"><img src="../image/close.svg" alt="" /></div>
             </a>
         </header>
