--- a/templates/signup.html
+++ b/templates/signup.html
@@ -23,7 +23,7 @@
         </header>
         <section class="create-account">
             <!-- FORM SECTION -->
-            <form action="testing.html">
+            <form action="./home.html">
                 <h2>Create an account</h2>
                 <p class="link-to-login">Have an account? <a href="./login.html">Login</a></p>
                 <input type="text" placeholder="Business name" id="business-name" />
