--- a/styles/home.css
+++ b/styles/home.css
@@ -1,13 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+/* GRID AND GRID LAYOUT */
+
+html {
+    font-family: "Montserrat", sans-serif;
+}
 .outer-dashboard-container {
     height: 100vh;
     width: 100%;
     display: grid;
-    grid-template-columns: 320px 3fr;
+    grid-template-columns: 320px 1fr;
     grid-template-rows: 64px 1fr;
     grid-template-areas:
         "nav nav"
@@ -18,16 +26,17 @@
 
 nav {
     grid-area: nav;
-    background-color: rgb(185, 239, 143);
+    background-color: rgb(0, 0, 0);
 }
 
 aside {
     grid-area: sidebar;
-    background-color: rgb(7, 7, 7);
+    background-color: rgb(0, 0, 0);
+    font-weight: 550;
 }
 main {
     display: grid;
-    grid-template-rows: 310px 80px 120px;
+    grid-template-rows: 309px 80px 110px;
     row-gap: 20px;
     padding: 15px;
 }
@@ -49,8 +58,48 @@ main {
     grid-template-columns: 2fr 1fr;
 }
 
+/* NAV AND NAVIGATION SECTION */
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 30px;
+}
+.acc-details {
+    display: flex;
+    align-items: center;
+}
+.acc-details img:nth-child(1) {
+    margin-right: 25px;
+}
+.acc-details img {
+    transition: 0.6s;
+}
+.acc-details img:hover {
+    transform: scale(1.3);
+}
+
+/* SIDEBAR STYLING */
+aside ul li {
+    text-align: center;
+}
+aside ul a {
+    text-decoration: none;
+    display: block;
+    padding: 10px 5px;
+    width: 80%;
+    margin: 25px auto;
+    border-radius: 10px;
+    color: white;
+}
+aside ul li:nth-child(1) a {
+    background-color: white;
+    color: black;
+}
+
 @media screen and (max-width: 1030px) {
     .outer-dashboard-container{
-         grid-template-columns: 0 1fr;
+        grid-template-columns: 0 1fr;
     }
+    
 }
