--- a/templates/landing.html
+++ b/templates/landing.html
@@ -16,7 +16,7 @@
             <ul>
                 <label for="toggle-menu" id="close-menu"><img src="../image/Icons/close_24dp_FILL0_wght400_GRAD0_opsz24.svg" alt="" /></label>
                 <span class="menu-links">
-                    <li><a href="">SHOP</a></li>
+                    <li><a href="./home.html">SHOP</a></li>
                     <li><a href="">BLOG</a></li>
                     <li><a href="">ABOUT</a></li>
                 </span>
