--- a/styles/home.css
+++ b/styles/home.css
@@ -20,7 +20,7 @@ html {
     grid-template-areas:
         "nav nav"
         "sidebar main";
-    transition: grid-template-columns 1s;
+    transition: grid-template-columns .7s;
     color: white;
 }
 
@@ -80,8 +80,14 @@ nav {
 }
 
 /* SIDEBAR STYLING */
+aside ul{
+    transition: .7s;
+}
+
 aside ul li {
     text-align: center;
+    list-style: none;
+    transition: 1s;
 }
 aside ul a {
     text-decoration: none;
@@ -90,7 +96,9 @@ aside ul a {
     width: 80%;
     margin: 25px auto;
     border-radius: 10px;
-    color: white;
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 253, 253);
+    overflow: hidden;
 }
 aside ul li:nth-child(1) a {
     background-color: white;
@@ -98,8 +106,11 @@ aside ul li:nth-child(1) a {
 }
 
 @media screen and (max-width: 1030px) {
-    .outer-dashboard-container{
+    aside ul {
+        overflow: hidden;
+        opacity: 0;
+    }
+    .outer-dashboard-container {
         grid-template-columns: 0 1fr;
     }
-    
 }
